fixed vertical alignment on intro title

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -40,6 +40,10 @@
   justify-content: center;
 }
 
+.intro-body h1 {
+  margin-top: 0;
+}
+
 .videos-body {
   width: 66vw;
   height: 70vh;
